[package]
name = "ros_keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = "0.9"
rosrust_msg = "0.1"
env_logger = "0.10.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3"
futures-timer = "3.0"
async-std = "1.12"
